--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -15,3 +15,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
