--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -17,7 +17,7 @@ eureka:
       defaultZone: http://eureka1:2001/eureka
 
 management:
-  endpoints
+  endpoints:
     web:
       exposure:
         include: refresh
